[VK] Hide the virtual keyboard when we enter window overview mode.

When we enter window overview mode (e.g. by dragging the top of an app),
we need to hide the virtual keyboard because:

1) It blocks the overview mode UI for no reason.
2) The previews of windows have blank space at the bottom because that's
   where the keyboard is.

Bug: 893856
Change-Id: I4f79f6bf603fd074a62b7ba29366ec5af18bbab2
Reviewed-on: https://chromium-review.googlesource.com/c/1278565
Commit-Queue: Darren Shen <shend@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#599561}
Former-commit-id: a643a13e0bc16fd0cab3a143ba841567efa7c67c